--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:testdb
 
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
+
+spring.security.user.name=jared
+spring.security.user.password=asdqwe123
